Change old theme name

--- a/wp-content/themes/new2-old/style.css
+++ b/wp-content/themes/new2-old/style.css
@@ -1,5 +1,5 @@
 /*!
-Theme Name: new2
+Theme Name: new2-old
 Theme URI: https://underscoretw.com/
 Author: underscoretw.com
 Author URI: https://underscoretw.com/
