--- a/wp-content/themes/new2/tailwind/custom/components/button.css
+++ b/wp-content/themes/new2/tailwind/custom/components/button.css
@@ -3,11 +3,13 @@
 }
 
 .wp-block-navigation-item__content,
-a.wp-block-button__link.wp-element-button,
-.wp-block-button__link.wp-element-button {
+a.wp-block-button__link.wp-element-button {
     border-radius: 0 15px 15px 15px;
-    @apply font-bold tracking-widest px-5 py-3;
-    @apply font-serif font-semibold text-lg tracking-wide bg-blue;
+    @apply font-bold tracking-widest px-5 py-1 md:py-2 lg:py-3;
+    @apply font-serif font-semibold text-lg tracking-wide bg-blue text-background;
+}
+span.wp-block-navigation-item__label {
+    @apply text-background
 }
 .wp-block-navigation-item__content:hover,
 a.wp-block-button__link.wp-element-button:hover {
@@ -16,4 +18,13 @@ a.wp-block-button__link.wp-element-button:hover {
 .wp-block-navigation-item__content:hover .wp-block-navigation-item__label,
 .wp-block-button:hover {
     @apply text-foreground
+}
+
+.directory-link {
+    .wp-block-navigation-item__content,
+    a.wp-block-button__link.wp-element-button {
+        border-radius: 0;
+        @apply bg-transparent
+
+    }
 }
