--- a/wp-content/themes/new2/tailwind/custom/components/ads.css
+++ b/wp-content/themes/new2/tailwind/custom/components/ads.css
@@ -1,14 +1,34 @@
 .ad {
     &160_300 {
-        @apply w-[160px] h-[300px] overflow-hidden
+        @apply w-[160px] h-[300px]
+    }
+    &200_300 {
+        @apply w-[200px] h-[300px]
+    }
+    &200_350 {
+        @apply w-[200px] h-[350px]
     }
     &768_90 {
-        @apply w-[768px] h-[90px] overflow-hidden
+        @apply max-w-[768px] h-[90px]
+    }
+    &768_180 {
+        & > .kt-row-column-wrap {
+            /* grid-template-rows: calc(100% * 768 / 180); */
+            aspect-ratio: 768 / 160;
+            @apply w-full
+        }
+        /* .innerblocks-wrap.block-editor-block-list__layout {
+            height: 180px;
+        }
+        @apply max-w-[768px] h-[180px] */
     }
     & > .kt-row-column-wrap {
         @apply !p-0
     }
-    @apply h-full
+    /* @apply h-full */
+}
+.entry-content .ad {
+    @apply overflow-hidden
 }
 .g {
     overflow: visible;
@@ -21,4 +41,10 @@
 .g-dyn, .g-single, .a-single {
     position: sticky;
     top: 40px;
+}
+.block-editor-block-list__block.aligncenter .components-resizable-box__container {
+    margin: auto;
+}
+figure.aligncenter img {
+    margin-inline: auto;
 }
