--- a/wp-content/themes/new2/tailwind/custom/components/button.css
+++ b/wp-content/themes/new2/tailwind/custom/components/button.css
@@ -18,7 +18,7 @@
     }
     .wp-block-navigation-item__content:hover .wp-block-navigation-item__label,
     .wp-block-button:hover {
-        @apply text-foreground
+        @apply text-background
     }
 }
 
