--- a/wp-content/themes/new2/tailwind/custom/gutenberg/kadence/row.css
+++ b/wp-content/themes/new2/tailwind/custom/gutenberg/kadence/row.css
@@ -1,6 +1,9 @@
 .wp-block-kadence-rowlayout {
     &.alignfull {
         & > .kt-row-column-wrap {
+            & > .wp-block-kadence-column {
+                /* padding-inline: var(--global-content-edge-padding) */
+            }
             @apply px-0;
         }
     }
@@ -23,6 +26,16 @@
     &.no-center {
         & > .kt-row-column-wrap {
             @apply !mx-[initial];
+        }
+    }
+}
+.wp-block-post-content > .wp-block-kadence-rowlayout {
+    &.alignfull {
+        & > .kt-row-column-wrap {
+            & > .wp-block-kadence-column {
+                padding-inline: var(--global-content-edge-padding)
+            }
+            @apply px-0;
         }
     }
 }
