--- a/wp-content/themes/new2/tailwind/custom/gutenberg/kadence/spacing.css
+++ b/wp-content/themes/new2/tailwind/custom/gutenberg/kadence/spacing.css
@@ -8,4 +8,7 @@ body {
     --global-kb-gap-lg: var(--wp--preset--spacing--50);
     --global-kb-gap-md: clamp(1rem, 0.7727rem + 0.7273vw, 1.5rem);
     --global-row-gutter-md: clamp(1.5rem, 0.3843rem + 3.3058vw, 2.5rem);
+
+    
+    --global-kb-font-size-md: clamp(0.7rem, 0.3071rem + 1.9643vw, 1.25rem);
 }
