--- a/wp-content/themes/new2/tailwind/custom/gutenberg/kadence/spacing.css
+++ b/wp-content/themes/new2/tailwind/custom/gutenberg/kadence/spacing.css
@@ -17,8 +17,8 @@ body {
     --global-row-gutter-md: var(--wp--preset--spacing--32);
     --global-row-gutter-sm: var(--wp--preset--spacing--16);
 
-    --global-kb-font-size-sm: var(--wp--preset--font-size--x-small);
-    --global-kb-font-size-md: var(--wp--preset--font-size--small);
+    --global-kb-font-size-sm: clamp(0.65rem, 0.3569rem + 1.3397vw, 1rem);
+    --global-kb-font-size-md: clamp(0.75rem, 0.3313rem + 1.9139vw, 1.25rem);
     --global-kb-font-size-lg: var(--wp--preset--font-size--medium);
     --global-kb-font-size-xl: var(--wp--preset--font-size--large);
     --global-kb-font-size-xxl: var(--wp--preset--font-size--x-large);
