--- a/wp-content/themes/new2/tailwind/custom/gutenberg/kadence/row.css
+++ b/wp-content/themes/new2/tailwind/custom/gutenberg/kadence/row.css
@@ -33,9 +33,10 @@
     &.alignfull {
         & > .kt-row-column-wrap {
             & > .wp-block-kadence-column {
-                padding-inline: var(--global-content-edge-padding)
+                /* padding-inline: var(--global-content-edge-padding) */
             }
-            @apply px-0;
+            padding-inline: var(--global-content-edge-padding)
+            /* @apply px-0; */
         }
     }
 }
