--- a/wp-content/themes/new2/theme/templates/index.html
+++ b/wp-content/themes/new2/theme/templates/index.html
@@ -1,3 +1,3 @@
-<!-- wp:template-part {"slug":"header-basic-1"} /-->
+<!-- wp:template-part {"slug":"header-jan24"} /-->
 
 <!-- wp:template-part {"slug":"footer","tagName":"footer"} /-->
